--- a/index.html
+++ b/index.html
@@ -1,11 +1,30 @@
 <html>
-	<head><title>chevdor on GitHub</title></head>
-	<link href="https://assets-cdn.github.com/assets/github-7f7a8d43d99dce26334cc1cb3b327f57a9309f9d6f215d6f3dff77d5e0c593a3.css" media="all" rel="stylesheet">
-	<link href="https://assets-cdn.github.com/assets/github2-001b8ff6b9af1d78d785feee91eaacf441aa9c531b0b1ad513b01221d194cb1d.css" media="all" rel="stylesheet">
-	<body class="logged_in  env-production macintosh vis-public">
+
+<head>
+    <title>chevdor on GitHub</title>
+
+    <link href="https://assets-cdn.github.com/assets/github-7f7a8d43d99dce26334cc1cb3b327f57a9309f9d6f215d6f3dff77d5e0c593a3.css" media="all" rel="stylesheet">
+    <link href="https://assets-cdn.github.com/assets/github2-001b8ff6b9af1d78d785feee91eaacf441aa9c531b0b1ad513b01221d194cb1d.css" media="all" rel="stylesheet">
+
+    <script src="bower_components/platform/platform.js"></script>
+    <link rel="import" href="bower_components/polymer-github-card/dist/polymer-github-card.html">
+</head>
+
+<body class="logged_in  env-production macintosh vis-public">
     <div class="outline-box outline-box-highlighted empty-repo-setup-option">
-		<h1>Hi there!</h1>
-		Check out my profile here: <a href="https://github.com/chevdor">https://github.com/chevdor</a>.
-	</div>
-	</body>
+
+        <h1>
+			<center>
+        Hi there!</center></h1> 
+        <center>Check out my profile here: <a href="https://github.com/chevdor">https://github.com/chevdor</a>.
+        </center>
+    </div>
+
+    <div>
+        <center>
+            <polymer-github-card user="chevdor"></polymer-github-card>
+        </center>
+    </div>
+</body>
+
 </html>
