Switched to CDN.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="https://assets-cdn.github.com/assets/github-7f7a8d43d99dce26334cc1cb3b327f57a9309f9d6f215d6f3dff77d5e0c593a3.css" media="all" rel="stylesheet">
     <link href="https://assets-cdn.github.com/assets/github2-001b8ff6b9af1d78d785feee91eaacf441aa9c531b0b1ad513b01221d194cb1d.css" media="all" rel="stylesheet">
 
-    <script src="bower_components/platform/platform.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/platform/1.3.0/platform.min.js"></script>
     <link rel="import" href="bower_components/polymer-github-card/dist/polymer-github-card.html">
 </head>
 
@@ -15,11 +15,11 @@
 
         <h1>
 			<center>
-        Hi there!</center></h1> 
+        Hi there!</center></h1>
         <center>Check out my profile here: <a href="https://github.com/chevdor">https://github.com/chevdor</a>.
         </center>
     </div>
-
+    <br/>
     <div>
         <center>
             <polymer-github-card user="chevdor"></polymer-github-card>
