--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1>
 			<center>
         Hi there!</center></h1>
-        <center>Check out my profile here: <a href="https://github.com/chevdor">https://github.com/chevdor</a>.
+        <center>Check out my GitHub profile below <br/>or find my contact details at <a href="https://onename.io/chevdor">https://onename.io/chevdor</a>
         </center>
     </div>
     <br/>
